--- a/composer.json
+++ b/composer.json
@@ -14,28 +14,28 @@
     "ext-mysql": "*",
     "lib-curl": "*",
     "symfony/symfony": "~2.3",
-    "symfony/icu": "1.0.*",
-    "doctrine/orm": "~2.2,>=2.2.3",
-    "doctrine/doctrine-bundle": "1.2.*",
-    "twig/extensions": "1.0.*",
-    "symfony/assetic-bundle": "2.3.*",
-    "symfony/swiftmailer-bundle": "2.3.*",
-    "symfony/monolog-bundle": "~2.4",
-    "sensio/distribution-bundle": "2.3.*",
-    "sensio/framework-extra-bundle": "2.3.*",
-    "sensio/generator-bundle": "2.3.*",
-    "jms/serializer-bundle": "0.13.*",
-    "friendsofsymfony/rest-bundle": "1.4.*",
-    "nelmio/api-doc-bundle": "2.7.*@dev",
-    "friendsofsymfony/http-cache-bundle": "~1.1.0",
-    "willdurand/hateoas-bundle": "0.2.*",
-    "hautelook/templated-uri-bundle": "~1.0",
-    "willdurand/rest-extra-bundle": "~1.0",
-    "egulias/email-validator": "1.2.2",
-    "rhumsaa/uuid": "2.7.*",
-    "nelmio/cors-bundle": "1.3.3",
-    "jms/translation-bundle": "1.1.x",
-    "moontoast/math": "1.1.0"
+    "symfony/icu": "*",
+    "doctrine/orm": "*",
+    "doctrine/doctrine-bundle": "*",
+    "twig/extensions": "*",
+    "symfony/assetic-bundle": "*",
+    "symfony/swiftmailer-bundle": "*",
+    "symfony/monolog-bundle": "*",
+    "sensio/distribution-bundle": "*",
+    "sensio/framework-extra-bundle": "*",
+    "sensio/generator-bundle": "*",
+    "jms/serializer-bundle": "*",
+    "friendsofsymfony/rest-bundle": "*",
+    "nelmio/api-doc-bundle": "*",
+    "friendsofsymfony/http-cache-bundle": "*",
+    "willdurand/hateoas-bundle": "*",
+    "hautelook/templated-uri-bundle": "*",
+    "willdurand/rest-extra-bundle": "*",
+    "egulias/email-validator": "*",
+    "ramsey/uuid": "*",
+    "nelmio/cors-bundle": "*",
+    "jms/translation-bundle": "*",
+    "moontoast/math": "*"
   },
   "require-dev": {
     "jns/xhprof-bundle": "1.0.*@dev",
