downgrade doctrine/dbal due to a ridiculous bug (can't create empty db)

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "symfony/icu": "*",
     "doctrine/orm": "*",
     "doctrine/doctrine-bundle": "*",
+    "doctrine/dbal": "<2.5",
     "twig/extensions": "*",
     "symfony/assetic-bundle": "*",
     "symfony/swiftmailer-bundle": "*",
