add and wire Hook entity.

--- a/src/Hexaa/ApiBundle/Resources/config/routing.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/routing.yml
@@ -41,6 +41,10 @@ consent:
 news:
     type:     rest
     resource: "Hexaa\ApiBundle\Controller\\NewsController"
+
+hooks:
+    type:     rest
+    resource: "Hexaa\ApiBundle\Controller\HookController"
     
 servicechild:
     type:     rest
