--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -17,6 +17,7 @@ monolog:
         - "release"
         - "email"
         - "error"
+        - "hook"
         
     handlers:
         accesshandler:
@@ -44,12 +45,17 @@ monolog:
             path:           %hexaa_log_dir%/email.log
             action_level:   info
             channels:       email
+        hookhandler:
+            type:           stream
+            path:           %hexaa_log_dir%/hook.log
+            action_level:   info
+            channels:       hook
         errorhandler:
             type:           stream
             path:           %hexaa_log_dir%/error.log
             action_level:   warning
             level:          warning
-            channels:       [access, modification, login, release, email, error]
+            channels:       [access, modification, login, release, email, error, hook]
         main:
             type:         fingers_crossed
             action_level: error
