fix some deps in composer.json + attempt to fix attribute caching + add cache to doctrine in production

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -5,6 +5,11 @@ imports:
 # always pass the requirements. Otherwise it would break your link (or even site with
 # strict_requirements = true). So we can disable the requirements check completely for
 # enhanced performance with strict_requirements = null.
+doctrine:
+    orm:
+        metadata_cache_driver: apc
+        query_cache_driver: apc
+
 framework:
     router:
         strict_requirements: null
