--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "ext-curl": "*",
     "ext-intl": "*",
     "ext-mcrypt": "*",
-    "ext-mysql": "*",
+    "ext-pdo_mysql": "*",
     "lib-curl": "*",
     "symfony/symfony": "~2.3",
     "symfony/process": "*",
@@ -19,7 +19,6 @@
     "doctrine/orm": "*",
     "doctrine/doctrine-bundle": "*",
     "doctrine/dbal": "<2.5",
-    "doctrine/cache": "~1.5.0",
     "twig/extensions": "*",
     "symfony/assetic-bundle": "*",
     "symfony/swiftmailer-bundle": "*",
