--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -55,7 +55,7 @@ services:
 
 # Caching
     hexaa.cache:
-        class: Doctrine\Common\Cache\ApcCache
+        class: Doctrine\Common\Cache\XcacheCache
 
 # Handlers
     hexaa.handler.entity_handler:
