--- a/composer.json
+++ b/composer.json
@@ -15,30 +15,29 @@
     "ext-xcache": "*",
     "lib-curl": "*",
     "symfony/symfony": "~2.3",
-    "symfony/process": "*",
-    "symfony/icu": "*",
-    "doctrine/orm": "*",
-    "doctrine/doctrine-bundle": "*",
+    "symfony/icu": "~1.2.2",
+    "doctrine/orm": "~2.4.8",
+    "doctrine/doctrine-bundle": "~1.6.0",
     "doctrine/dbal": "<2.5",
-    "twig/extensions": "*",
-    "symfony/assetic-bundle": "*",
-    "symfony/swiftmailer-bundle": "*",
-    "symfony/monolog-bundle": "*",
-    "sensio/distribution-bundle": "*",
-    "sensio/framework-extra-bundle": "*",
-    "sensio/generator-bundle": "*",
-    "jms/serializer-bundle": "*",
-    "friendsofsymfony/rest-bundle": "*",
-    "nelmio/api-doc-bundle": "*",
+    "twig/extensions": "~1.3.0",
+    "symfony/assetic-bundle": "~2.7.1",
+    "symfony/swiftmailer-bundle": "~2.3.8",
+    "symfony/monolog-bundle": "~2.8.2",
+    "sensio/distribution-bundle": "~5.0.1",
+    "sensio/framework-extra-bundle": "~3.0.11",
+    "sensio/generator-bundle": "~3.0.0",
+    "jms/serializer-bundle": "~1.1.0",
+    "friendsofsymfony/rest-bundle": "~1.7.2",
+    "nelmio/api-doc-bundle": "~2.10.3",
     "friendsofsymfony/http-cache-bundle": "*",
-    "willdurand/hateoas-bundle": "*",
-    "hautelook/templated-uri-bundle": "*",
-    "willdurand/rest-extra-bundle": "*",
-    "egulias/email-validator": "*",
+    "willdurand/hateoas-bundle": "~1.0.0",
+    "hautelook/templated-uri-bundle": "~2.0.0",
+    "willdurand/rest-extra-bundle": "~1.0.2",
+    "egulias/email-validator": "~1.2.11",
     "ramsey/uuid": "~3.0.0",
-    "nelmio/cors-bundle": "*",
-    "jms/translation-bundle": "*",
-    "moontoast/math": "*"
+    "nelmio/cors-bundle": "~1.3.0",
+    "jms/translation-bundle": "~1.1.0",
+    "moontoast/math": "~1.1.0"
   },
   "conflict": {
     "symfony/routing": "2.4.1"
@@ -55,7 +54,7 @@
     "post-update-cmd": [
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
       "bash post-update.sh"
     ]
   },
