--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "ext-intl": "*",
     "ext-mcrypt": "*",
     "ext-pdo_mysql": "*",
-    "ext-xcache": "*",
+    "ext-memcached": "*",
     "lib-curl": "*",
     "symfony/symfony": "~2.3",
     "symfony/icu": "~1.2.2",
