--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -28,27 +28,27 @@ monolog:
         accesshandler:
             type:           stream
             path:           %hexaa_log_dir%/access.log
-            action_level:   info
+            action_level:   debug
             channels:       [security, access]
         audithandler:
             type:           stream
             path:           %hexaa_log_dir%/audit.log
-            action_level:   info
+            action_level:   debug
             channels:       modification
         authhandler:
             type:           stream
             path:           %hexaa_log_dir%/auth.log
-            action_level:   info
+            action_level:   debug
             channels:       [security, login]
         releasehandler:
             type:           stream
             path:           %hexaa_log_dir%/release.log
-            action_level:   info
+            action_level:   debug
             channels:       release
         emailhandler:
             type:           stream
             path:           %hexaa_log_dir%/email.log
-            action_level:   info
+            action_level:   debug
             channels:       email
         hookhandler:
             type:           stream
@@ -58,7 +58,7 @@ monolog:
         errorhandler:
             type:           stream
             path:           %hexaa_log_dir%/error.log
-            action_level:   warning
+            action_level:   debug
             level:          warning
             channels:       [access, modification, login, release, email, error, hook]
         main:
