--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,7 +78,7 @@ fos_rest:
     
     param_fetcher_listener: true
     view:
-        view_response_listener: 'force'
+        view_response_listener: true
         formats:
             xml:  true
             json: true
