--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -188,6 +188,10 @@ services:
         class: Hexaa\ApiBundle\Validator\Constraints\ManagerIsOrganizationMemberValidator
         tags:
             - { name: validator.constraint_validator, alias: manager_is_organization_member }
+    validator.unique.attribute_value_is_not_member_of:
+        class: Hexaa\ApiBundle\Validator\Constraints\AttributeValueIsNotIsMemberOfValidator
+        tags:
+            - { name: validator.constraint_validator, alias: attribute_value_is_not_member_of }
     validator.unique.new_entitlement_pack_is_not_private:
         class: Hexaa\ApiBundle\Validator\Constraints\NewEntitlementPackIsEnabledAndNotPrivateValidator
         tags:
