remove consent module pt II.

--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -5,7 +5,6 @@ parameters:
     hook_handler.class:                     Hexaa\ApiBundle\Hook\HookHandler
     expire_linker_token_hook.class:         Hexaa\ApiBundle\Hook\ExpireHook\ExpireLinkerTokensHook
     expire_principal_hook.class:            Hexaa\ApiBundle\Hook\ExpireHook\ExpirePrincipalsHook
-    expire_consent_hook.class:              Hexaa\ApiBundle\Hook\ExpireHook\ExpireConsentsHook
     review_attributes_hook.class:           Hexaa\ApiBundle\Hook\ExpireHook\ReviewAttributesHook
 
 # Commands
@@ -44,10 +43,6 @@ services:
         class: %expire_principal_hook.class%
         arguments: [ @doctrine.orm.entity_manager, "@monolog.logger.modification", "@monolog.logger.error", "@monolog.logger.email", "@mailer", %hexaa_ui_url%, %hexaa_from_address%, %hexaa_principal_expiration_limit% ]
         lazy: true
-    hexaa.hook.expire_consents_hook:
-        class: %expire_consent_hook.class%
-        arguments: [ @doctrine.orm.entity_manager, "@monolog.logger.modification", "@monolog.logger.error", "@monolog.logger.email", "@mailer", %hexaa_ui_url%, %hexaa_from_address% ]
-        lazy: true
     hexaa.hook.review_attributes_hook:
         class: %review_attributes_hook.class%
         arguments: [ @doctrine.orm.entity_manager, "@monolog.logger.modification", "@monolog.logger.error", "@monolog.logger.email", "@mailer", %hexaa_ui_url%, %hexaa_from_address% ]
@@ -82,7 +77,7 @@ services:
 # Commands
     hexaa.commands.expire:
         class: %hexaa_expire_command.class%
-        arguments: [ "@hexaa.hook.expire_linker_token_hook", "@hexaa.hook.expire_principal_hook", "@hexaa.hook.expire_consents_hook", "@hexaa.hook.review_attributes_hook" ]
+        arguments: [ "@hexaa.hook.expire_linker_token_hook", "@hexaa.hook.expire_principal_hook", "@hexaa.hook.review_attributes_hook" ]
         tags:
             - { name: console.command }
     hexaa.commands.remove_public_attribute_specs:
