--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -15,6 +15,10 @@ RUN apt-get install -y \
     && pecl install memcached-2.2.0 \
     && docker-php-ext-enable memcached
 
+RUN echo memory_limit = -1 > $PHP_INI_DIR/conf.d/memory_limit.ini
+
 RUN php composer.phar install
+
+ADD docker/hexaa_admins.yml app/config/hexaa_admins.yml
 
 CMD [ "/run_dev.sh" ]
