--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -20,5 +20,6 @@ RUN echo memory_limit = -1 > $PHP_INI_DIR/conf.d/memory_limit.ini
 RUN php composer.phar install
 
 ADD docker/hexaa_admins.yml app/config/hexaa_admins.yml
+ADD docker/hexaa_entityids.yml app/config/hexaa_entityids.yml
 
 CMD [ "/run_dev.sh" ]
