update doctrine wishing it will fix a strange issue

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "lib-curl": "*",
     "symfony/symfony": "~2.3",
     "symfony/icu": "~1.2.2",
-    "doctrine/orm": "~2.4.8",
-    "doctrine/doctrine-bundle": "~1.6.0",
-    "doctrine/dbal": "<2.5",
+    "doctrine/orm": "*",
+    "doctrine/doctrine-bundle": "*",
+    "doctrine/dbal": "*",
     "twig/extensions": "~1.3.0",
     "symfony/assetic-bundle": "~2.7",
     "symfony/swiftmailer-bundle": "~2.3.8",
