docker-for-dev: work around https://github.com/doctrine/DoctrineBundle/issues/351 as doctrine tries to connect to the db during composer install thus breaking the docker image build process

--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -21,6 +21,10 @@ WORKDIR /usr/src/myapp
 
 COPY . /usr/src/myapp
 
+# This is a workaround for https://github.com/doctrine/DoctrineBundle/issues/351
+# Should be removed ASAP.
+ADD docker/parameters.yml /usr/src/myapp/app/config/parameters.yml
+
 RUN curl https://getcomposer.org/installer -O
 RUN php installer
 
